{
  "version": 4,
  "terraform_version": "1.11.3",
  "serial": 58,
  "lineage": "72e8e285-2e43-b9b7-da3d-6ee32dddbeca",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "all_worker_mgmt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:184844412431:security-group/sg-01e8b61985bde3c1a",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-01e8b61985bde3c1a",
            "ingress": [],
            "name": "all_worker_management20250412210919260600000004",
            "name_prefix": "all_worker_management",
            "owner_id": "184844412431",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-07391f7c2811371c4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "all_worker_mgmt_egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "allow outbound traffic to anywhere",
            "from_port": 0,
            "id": "sgrule-27692546",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-01e8b61985bde3c1a",
            "security_group_rule_id": "sgr-0c6eaed46a9354674",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.all_worker_mgmt",
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "all_worker_mgmt_ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.0.0.0/8",
              "172.16.0.0/12",
              "192.168.0.0/16"
            ],
            "description": "allow inbound traffic from eks",
            "from_port": 0,
            "id": "sgrule-2857424701",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-01e8b61985bde3c1a",
            "security_group_rule_id": "",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.all_worker_mgmt",
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:184844412431:security-group/sg-0e26d1aa781dbe55f",
            "description": "EKS cluster security group",
            "egress": [],
            "id": "sg-0e26d1aa781dbe55f",
            "ingress": [],
            "name": "mydemoeks-5PFVtSQ5-cluster-20250412210919948300000007",
            "name_prefix": "mydemoeks-5PFVtSQ5-cluster-",
            "owner_id": "184844412431",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "mydemoeks-5PFVtSQ5-cluster",
              "cluster": "myfirstdemo"
            },
            "tags_all": {
              "Name": "mydemoeks-5PFVtSQ5-cluster",
              "cluster": "myfirstdemo"
            },
            "timeouts": null,
            "vpc_id": "vpc-07391f7c2811371c4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:184844412431:security-group/sg-0169350a1b236aa36",
            "description": "EKS node shared security group",
            "egress": [],
            "id": "sg-0169350a1b236aa36",
            "ingress": [],
            "name": "mydemoeks-5PFVtSQ5-node-20250412210919268100000006",
            "name_prefix": "mydemoeks-5PFVtSQ5-node-",
            "owner_id": "184844412431",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "mydemoeks-5PFVtSQ5-node",
              "cluster": "myfirstdemo",
              "kubernetes.io/cluster/mydemoeks-5PFVtSQ5": "owned"
            },
            "tags_all": {
              "Name": "mydemoeks-5PFVtSQ5-node",
              "cluster": "myfirstdemo",
              "kubernetes.io/cluster/mydemoeks-5PFVtSQ5": "owned"
            },
            "timeouts": null,
            "vpc_id": "vpc-07391f7c2811371c4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "ingress_nodes_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node groups to cluster API",
            "from_port": 443,
            "id": "sgrule-2231029828",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0e26d1aa781dbe55f",
            "security_group_rule_id": "sgr-0e71a984162e1390a",
            "self": false,
            "source_security_group_id": "sg-0169350a1b236aa36",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "egress_all",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow all egress",
            "from_port": 0,
            "id": "sgrule-1348728863",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-0169350a1b236aa36",
            "security_group_rule_id": "sgr-0e1181686d6544af6",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node groups",
            "from_port": 443,
            "id": "sgrule-1820713268",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0169350a1b236aa36",
            "security_group_rule_id": "sgr-0df004929be953337",
            "self": false,
            "source_security_group_id": "sg-0e26d1aa781dbe55f",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_4443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 4443/tcp webhook",
            "from_port": 4443,
            "id": "sgrule-3890866798",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0169350a1b236aa36",
            "security_group_rule_id": "sgr-0d3bcdcdef02edcbc",
            "self": false,
            "source_security_group_id": "sg-0e26d1aa781dbe55f",
            "timeouts": null,
            "to_port": 4443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_6443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 6443/tcp webhook",
            "from_port": 6443,
            "id": "sgrule-782994936",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0169350a1b236aa36",
            "security_group_rule_id": "sgr-096fca8e0f8c2f140",
            "self": false,
            "source_security_group_id": "sg-0e26d1aa781dbe55f",
            "timeouts": null,
            "to_port": 6443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_8443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 8443/tcp webhook",
            "from_port": 8443,
            "id": "sgrule-1039643097",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0169350a1b236aa36",
            "security_group_rule_id": "sgr-09b4f1e1205deab9e",
            "self": false,
            "source_security_group_id": "sg-0e26d1aa781dbe55f",
            "timeouts": null,
            "to_port": 8443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_9443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 9443/tcp webhook",
            "from_port": 9443,
            "id": "sgrule-1498841618",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0169350a1b236aa36",
            "security_group_rule_id": "sgr-072ba6e7fb59c1128",
            "self": false,
            "source_security_group_id": "sg-0e26d1aa781dbe55f",
            "timeouts": null,
            "to_port": 9443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_kubelet",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node kubelets",
            "from_port": 10250,
            "id": "sgrule-2332678874",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0169350a1b236aa36",
            "security_group_rule_id": "sgr-06c7d9186f296ef2a",
            "self": false,
            "source_security_group_id": "sg-0e26d1aa781dbe55f",
            "timeouts": null,
            "to_port": 10250,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_nodes_ephemeral",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node ingress on ephemeral ports",
            "from_port": 1025,
            "id": "sgrule-71235912",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0169350a1b236aa36",
            "security_group_rule_id": "sgr-0408f9de333dd6c93",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 65535,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_self_coredns_tcp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS",
            "from_port": 53,
            "id": "sgrule-419521688",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0169350a1b236aa36",
            "security_group_rule_id": "sgr-00f02e3332215e5ca",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_self_coredns_udp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS UDP",
            "from_port": 53,
            "id": "sgrule-3177105271",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "udp",
            "security_group_id": "sg-0169350a1b236aa36",
            "security_group_rule_id": "sgr-07aa7562c4f2e0755",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:184844412431:network-acl/acl-0fc38011e5cadc9e2",
            "default_network_acl_id": "acl-0fc38011e5cadc9e2",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-0fc38011e5cadc9e2",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "184844412431",
            "subnet_ids": [
              "subnet-05225c81502d3de52",
              "subnet-0708ce50f49c370ca",
              "subnet-0d4c7619264dab1a1"
            ],
            "tags": {
              "Name": "mydemoeks-vpc-default",
              "kubernetes.io/cluster/mydemoeks-5PFVtSQ5": "shared"
            },
            "tags_all": {
              "Name": "mydemoeks-vpc-default",
              "kubernetes.io/cluster/mydemoeks-5PFVtSQ5": "shared"
            },
            "vpc_id": "vpc-07391f7c2811371c4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:184844412431:route-table/rtb-0e36775c10795024c",
            "default_route_table_id": "rtb-0e36775c10795024c",
            "id": "rtb-0e36775c10795024c",
            "owner_id": "184844412431",
            "propagating_vgws": null,
            "route": [],
            "tags": {
              "Name": "mydemoeks-vpc-default",
              "kubernetes.io/cluster/mydemoeks-5PFVtSQ5": "shared"
            },
            "tags_all": {
              "Name": "mydemoeks-vpc-default",
              "kubernetes.io/cluster/mydemoeks-5PFVtSQ5": "shared"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-07391f7c2811371c4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:184844412431:security-group/sg-06d598903efd9f661",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-06d598903efd9f661",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "184844412431",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "mydemoeks-vpc-default",
              "kubernetes.io/cluster/mydemoeks-5PFVtSQ5": "shared"
            },
            "tags_all": {
              "Name": "mydemoeks-vpc-default",
              "kubernetes.io/cluster/mydemoeks-5PFVtSQ5": "shared"
            },
            "vpc_id": "vpc-07391f7c2811371c4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0a30f5dc147a10573",
            "arn": "arn:aws:ec2:us-east-1:184844412431:elastic-ip/eipalloc-0a30f5dc147a10573",
            "domain": "vpc",
            "id": "eipalloc-0a30f5dc147a10573",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-98-84-146-65.compute-1.amazonaws.com",
            "public_ip": "98.84.146.65",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "mydemoeks-vpc-us-east-1a",
              "kubernetes.io/cluster/mydemoeks-5PFVtSQ5": "shared"
            },
            "tags_all": {
              "Name": "mydemoeks-vpc-us-east-1a",
              "kubernetes.io/cluster/mydemoeks-5PFVtSQ5": "shared"
            },
            "vpc": true
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:184844412431:internet-gateway/igw-05d3935a333d3671a",
            "id": "igw-05d3935a333d3671a",
            "owner_id": "184844412431",
            "tags": {
              "Name": "mydemoeks-vpc",
              "kubernetes.io/cluster/mydemoeks-5PFVtSQ5": "shared"
            },
            "tags_all": {
              "Name": "mydemoeks-vpc",
              "kubernetes.io/cluster/mydemoeks-5PFVtSQ5": "shared"
            },
            "vpc_id": "vpc-07391f7c2811371c4"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0a30f5dc147a10573",
            "association_id": "eipassoc-0c3a6b7c9ec158335",
            "connectivity_type": "public",
            "id": "nat-0588f92c725bfc101",
            "network_interface_id": "eni-02cbc25e8d958d959",
            "private_ip": "10.0.4.206",
            "public_ip": "98.84.146.65",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-05225c81502d3de52",
            "tags": {
              "Name": "mydemoeks-vpc-us-east-1a",
              "kubernetes.io/cluster/mydemoeks-5PFVtSQ5": "shared"
            },
            "tags_all": {
              "Name": "mydemoeks-vpc-us-east-1a",
              "kubernetes.io/cluster/mydemoeks-5PFVtSQ5": "shared"
            }
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-06f9c1c86188e9c121080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0588f92c725bfc101",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-06f9c1c86188e9c12",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-05d3935a333d3671a",
            "id": "r-rtb-0c414c2b4b028b2a11080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0c414c2b4b028b2a1",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:184844412431:route-table/rtb-06f9c1c86188e9c12",
            "id": "rtb-06f9c1c86188e9c12",
            "owner_id": "184844412431",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "mydemoeks-vpc-private",
              "kubernetes.io/cluster/mydemoeks-5PFVtSQ5": "shared"
            },
            "tags_all": {
              "Name": "mydemoeks-vpc-private",
              "kubernetes.io/cluster/mydemoeks-5PFVtSQ5": "shared"
            },
            "timeouts": null,
            "vpc_id": "vpc-07391f7c2811371c4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:184844412431:route-table/rtb-0c414c2b4b028b2a1",
            "id": "rtb-0c414c2b4b028b2a1",
            "owner_id": "184844412431",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "mydemoeks-vpc-public",
              "kubernetes.io/cluster/mydemoeks-5PFVtSQ5": "shared"
            },
            "tags_all": {
              "Name": "mydemoeks-vpc-public",
              "kubernetes.io/cluster/mydemoeks-5PFVtSQ5": "shared"
            },
            "timeouts": null,
            "vpc_id": "vpc-07391f7c2811371c4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f11d17fcb279de71",
            "route_table_id": "rtb-06f9c1c86188e9c12",
            "subnet_id": "subnet-0d4c7619264dab1a1"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02e89faf5a5037f88",
            "route_table_id": "rtb-06f9c1c86188e9c12",
            "subnet_id": "subnet-019ed7c08fb7dfcc0"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b7a0c4b3aaa96d68",
            "route_table_id": "rtb-0c414c2b4b028b2a1",
            "subnet_id": "subnet-05225c81502d3de52"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b2b471051c623e81",
            "route_table_id": "rtb-0c414c2b4b028b2a1",
            "subnet_id": "subnet-0708ce50f49c370ca"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:184844412431:subnet/subnet-0d4c7619264dab1a1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d4c7619264dab1a1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "184844412431",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "mydemoeks-vpc-private-us-east-1a",
              "kubernetes.io/cluster/mydemoeks-5PFVtSQ5": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "mydemoeks-vpc-private-us-east-1a",
              "kubernetes.io/cluster/mydemoeks-5PFVtSQ5": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-07391f7c2811371c4"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:184844412431:subnet/subnet-019ed7c08fb7dfcc0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-019ed7c08fb7dfcc0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "184844412431",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "mydemoeks-vpc-private-us-east-1b",
              "kubernetes.io/cluster/mydemoeks-5PFVtSQ5": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "mydemoeks-vpc-private-us-east-1b",
              "kubernetes.io/cluster/mydemoeks-5PFVtSQ5": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-07391f7c2811371c4"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:184844412431:subnet/subnet-05225c81502d3de52",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05225c81502d3de52",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "184844412431",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "mydemoeks-vpc-public-us-east-1a",
              "kubernetes.io/cluster/mydemoeks-5PFVtSQ5": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "mydemoeks-vpc-public-us-east-1a",
              "kubernetes.io/cluster/mydemoeks-5PFVtSQ5": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-07391f7c2811371c4"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:184844412431:subnet/subnet-0708ce50f49c370ca",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.5.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0708ce50f49c370ca",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "184844412431",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "mydemoeks-vpc-public-us-east-1b",
              "kubernetes.io/cluster/mydemoeks-5PFVtSQ5": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "mydemoeks-vpc-public-us-east-1b",
              "kubernetes.io/cluster/mydemoeks-5PFVtSQ5": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-07391f7c2811371c4"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:184844412431:vpc/vpc-07391f7c2811371c4",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0fc38011e5cadc9e2",
            "default_route_table_id": "rtb-0e36775c10795024c",
            "default_security_group_id": "sg-06d598903efd9f661",
            "dhcp_options_id": "dopt-0f4a23dfa63d41ee3",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-07391f7c2811371c4",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0e36775c10795024c",
            "owner_id": "184844412431",
            "tags": {
              "Name": "mydemoeks-vpc",
              "kubernetes.io/cluster/mydemoeks-5PFVtSQ5": "shared"
            },
            "tags_all": {
              "Name": "mydemoeks-vpc",
              "kubernetes.io/cluster/mydemoeks-5PFVtSQ5": "shared"
            }
          },
          "dependencies": [
            "random_string.suffix"
          ],
          "create_before_destroy": true
        }
      ]
    }
  ]
}